--- a/chessica/Cargo.toml
+++ b/chessica/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lazy_static = "1.4.0"
+rand = "0.8.5"
+regex = "1.7.3"
+string-builder = "0.2.0"
 tabled = "0.10.0"
+test-case = "3.1.0"
