--- a/chessica/Cargo.toml
+++ b/chessica/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+counter = "0.5.7"
 enum-map = "2.5.0"
 lazy_static = "1.4.0"
 rand = "0.8.5"
