--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 resources:
   containers:
   - container: rustbuild
-    image: tkhoa2711/debian-curl:buster-slim
+    image: gcc:9-buster
 
 variables:
   BuildConfiguration: 'Release'
