--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,8 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+name: $(MajorMinorVersion).$(PatchVersion)
+
 resources:
   containers:
   - container: rustbuild
@@ -16,11 +18,13 @@ resources:
 
 variables:
   BuildConfiguration: 'Release'
+  MajorMinorVersion: 0.1
+  PatchVersion: $[counter(variables['majorMinorVersion'], 0)]
 
 steps:
 - script: |
     curl https://sh.rustup.rs -sSf | sh -s -- -y
-    echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"      
+    echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
   target: rustbuild
   displayName: Install rust
 - script: cargo build --release --all
@@ -41,13 +45,14 @@ steps:
   inputs:
     command: pack
     packagesToPack: 'chessica-api/dotnet/ChessicaRustApi.csproj'
+    versioningScheme: byBuildNumber
+
 - task: NuGetAuthenticate@0
   target: host
   displayName: NuGet authenticate
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   target: host
-  displayName: NuGet push
+  displayName: Dotnet push
   inputs:
     command: push
     publishVstsFeed: 'chessica/private-nuget'
-    allowPackageConflicts: true
