Add random perturbation feature

--- a/chessica-engine/Cargo.toml
+++ b/chessica-engine/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 chessica = { path = "../chessica" }
 log = "0.4.17"
+rand = "0.8.5"
 simplelog = "0.12.1"
 test-case = "3.1.0"
