--- a/chessica-engine/Cargo.toml
+++ b/chessica-engine/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chessica = { path = "../chessica" }
+itertools = "0.10.5"
 log = "0.4.17"
 rand = "0.8.5"
 simplelog = "0.12.1"
